# habit-tracker

./: .gitignore
client/: .eslintrc.cjs  .lintstagedrc  .prettierignore  .prettierrc.json  index.html  package.json  tsconfig.json  vite.config.ts
client/dev-dist/: sw.js
client/src/: App.tsx
client/src/utils/: theme.ts
client/tests/: App.test.tsx
server/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
server/accounts/: admin.py  forms.py  managers.py  models.py
server/accounts/migrations/: 0001_initial.py
server/server/: settings.py
