[tool.black]
line-length = 120

[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend server for habit-tracker project"
authors = ["Michał Droś <michal.dros01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
Django = "^4.2.4"
django-environ = "^0.10.0"
isort = "^5.12.0"
python = "^3.11"
psycopg2 = "^2.9.7"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
